--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -43,6 +43,28 @@
   height: auto;
 }
 
+.header {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 100;
+}
+
+.wallet-buttons {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.center-links {
+  display: flex;
+  justify-content: center;
+}
+
+
 body {
   margin: 0;
   padding: 0;
@@ -56,7 +78,18 @@ body {
   background-blend-mode: multiply;
 }
 
-h1, h2, p {
+h2, p{
   color: white;
   font-family: 'Roboto', sans-serif;
+}
+
+a {
+  color: yellow;
+  font-family: 'Roboto', sans-serif;
+}
+
+h1 {
+  color: white;
+  font-family: 'Roboto', sans-serif;
+  text-align: center;
 }
